Improvement on dftfreq function, and update of Rapport.

--- a/Rapport.ipynb
+++ b/Rapport.ipynb
@@ -125,24 +125,20 @@
     "```\n",
     "Une fonction pour générer la liste des fréquences de Fourier est également pratique : \n",
     "```python\n",
-    "def dftfreq(N, T):\n",
-    "    \"\"\"\n",
-    "    Returns frequency coordinates for the DFT functions.\n",
-    "    Input: Size of the time series, and time step.\n",
-    "    Output: Frequency serie of size N//2+1\n",
-    "    \"\"\"\n",
-    "    N = int(N/2) + 1\n",
-    "    freq = np.zeros(N)\n",
-    "    for n in range(N):\n",
-    "        freq[n] = n/T\n",
-    "    return freq\n",
+    " def dftfreq(N, T):\n",
+    "     \"\"\"\n",
+    "     Returns frequency coordinates for the DFT functions.\n",
+    "     Input: Size of the time series, and time step.\n",
+    "     Output: Frequency serie of size N//2+1\n",
+    "     \"\"\"\n",
+    "     return np.arange(N//2 + 1) / T\n",
     "```\n",
     "Appliquons cette fonction aux signaux synthétiques $y_0(t)$, $y_1(t)$ et $y_2(t)$ définis également dans le même fichier : "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
