--- a/Rapport.ipynb
+++ b/Rapport.ipynb
@@ -220,7 +220,7 @@
     "\n",
     "Nous observons bien les fréquences correspondantes à $f_0$ et $f_1$ sur les spectres, mais une chose est très claire : en ne se basant que sur la transformée de Fourier, il est impossible de distinguer les signaux $y_1$ et $y_2$, qui diffèrent par le déphasage entre les modes associés à ces deux fréquences. Cela sera possible avec transformée en ondelettes.\n",
     "\n",
-    "Nous avons également confirmé la précision de notre DFT à l'aide des transformées implémentées dans `numpy.fft` (cf. [TPA2-donnees-synthetiques.ipynb](http://nbviewer.jupyter.org/github/gbogopolsky/spectral-analysis-astro/blob/master/TPA2-donnees-synthetiques.ipynb?flush_cache=true \"TPA2-donnees-synthetiques on nbviewer\"), avec succès."
+    "Nous avons également confirmé la précision de notre DFT à l'aide des transformées implémentées dans `numpy.fft` (cf. [TPA2-donnees-synthetiques.ipynb](http://nbviewer.jupyter.org/github/gbogopolsky/spectral-analysis-astro/blob/master/TPA2-donnees-synthetiques.ipynb?flush_cache=true \"TPA2-donnees-synthetiques on nbviewer\")), avec succès."
    ]
   },
   {
