Some modifications in text and presentation.

--- a/Rapport.ipynb
+++ b/Rapport.ipynb
@@ -45,30 +45,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tout d'abord, définissons la transformée de Fourier discrète (DFT, *discrete Fourier transform*). Soit une série temporelle $u[j] = u(t_{j})$ avec $t_{j} = j\\Delta t = j T/N$ où $T$ est le temps d'enregistrement, $N$ le nombre de mesures et $j = 0,1, \\ldots ,N-1$ l'indice des points de mesure temporelle. Nous allons décomposer ce signal sur un nombre fini des fréquences définies comme $f_{n} = n/T$ avec $n = 0,1,\\ldots,N - 1$ l'indice des fréquences.\n",
-    "\n",
+    "Tout d'abord, définissons la transformée de Fourier discrète (DFT, *discrete Fourier transform*). Soit une série temporelle $u[j] = u(t_{j})$ avec $t_{j} = j\\Delta t = j T/N$ où $T$ est le temps d'enregistrement, $N$ le nombre de mesures et $j = 0,1, \\ldots ,N-1$ l'indice des points de mesure temporelle. Nous allons décomposer ce signal sur un nombre fini des fréquences définies comme $f_{n} = n/T$ avec $n = 0,1,\\ldots,N - 1$ l'indice des fréquences.  \n",
     "La DFT est alors définie comme suit :\n",
     "$$ \\hat{u}[n] = \\frac{1}{N} \\sum_{j=0}^{N-1}u[j] e^{-2 i \\pi \\frac{nj}{N}}$$\n",
     "\n",
     "La transformée de Fourier inverse, c'est-à-dire l'opération qui à partir du spectre en fréquence reconstruit le signal temporel, est ainsi :\n",
+    "\n",
     "$$u[j] = \\sum_{j=0}^{N-1} \\hat{u}[n] e^{2 i \\pi \\frac{nj}{N}}$$\n",
     "\n",
     "Une telle transformée a des propriétés intéressantes : pour un signal réel, il est possible de montrer que : \n",
+    "\n",
     "$$ \\hat{u}[N - n] = \\hat{u}^*[n]$$\n",
     "*Preuve :*\n",
+    "\n",
     "$$ \\hat{u}[N - n] = \\frac{1}{N} \\sum_{j=0}^{N-1}u[j] e^{-2 i \\pi \\frac{(N-n)j}{N}} = \\frac{1}{N} \\sum_{j=0}^{N-1}u[j] e^{-2i \\pi j} e^{2 i \\pi \\frac{nj}{N}} = \\frac{1}{N} \\sum_{j=0}^{N-1}u[j] e^{2 i \\pi \\frac{nj}{N}} = \\hat{u}^*[n]$$\n",
     "\n",
-    "Nous pouvons aussi démontrer que cette transformation conserve l'énergie: :\n",
+    "Nous pouvons aussi démontrer que cette transformation conserve l'énergie :\n",
+    "\n",
     "$$ \\sum_{n=0}^{N-1} \\left| \\hat{u}[n] \\right| ^2  = \\sum_{n=0}^{N-1} \\hat{u}[n] \\hat{u}[n]^* = \\frac{1}{N^2} \\sum_{n = 0}^{N-1} \\left( \\sum_{j=0}^{N-1} u[j] e^{-2i\\pi \\frac{nj}{N}} \\right) \\left( \\sum_{k=0}^{N-1} u[k] e^{2i\\pi \\frac{nk}{N}} \\right)$$\n",
     "En séparant le produit de sommes en une somme de sommes, il vient : \n",
+    "\n",
     "$$ \\sum_{n=0}^{N-1} \\left| \\hat{u}[n] \\right| ^2 = \\frac{1}{N^2} \\sum_{n = 0}^{N-1} \\left( \\sum_{\\substack{j=0\\\\ k=0\\\\ j=k}}^{N-1} u[j] u[k] + \\sum_{\\substack{j=0\\\\ k=0\\\\ j\\neq k}}^{N-1} u[j]u[k] e^{2i\\pi \\frac{n(k-j)}{N}} \\right)$$\n",
     "Inverser les sommations permet d'écrire :\n",
+    "\n",
     "$$ \\sum_{n=0}^{N-1} \\left| \\hat{u}[n] \\right| ^2 = \\frac{1}{N^2} \\sum_{j=0}^{N-1} u[j]^2 \\sum_{n=0}^{N-1} 1 + \\sum_{\\substack{j=0\\\\ k=0\\\\ j\\neq k}}^{N-1} u[j]u[k] \\sum_{n=0}^{N-1} e^{2i\\pi \\frac{n(k-j)}{N}}$$\n",
     "où l'on reconnaît la somme des racines de l'unité qui vaut zéro. D'où :\n",
+    "\n",
     "$$ \\sum_{n=0}^{N-1} \\left| \\hat{u}[n] \\right| ^2 = \\frac{1}{N} \\sum_{j=0}^{N-1} \\left| u[j]\\right|^2$$\n",
     "C'est le théorème de Parseval-Plancherel.\n",
     "\n",
     "Nous avons parlé plus haut de la PSD (*power spectral density*). Elle se définit : $S[n] = 2T \\left| \\hat{u}[n] \\right|$ avec $n = 0,1, \\ldots, N/2-1$, car la deuxième moitié du spectre est identique à la première (comme nous l'avons montré précédemment). $S[n]$ s'exprime en $\\text{V}^2 ~\\text{Hz}^{-1}$. Nous pouvons également réécrire le théorème de Plancherel avec la PSD : \n",
+    "\n",
     "$$ \\sum_{n=0}^{N-1} S[n] = \\frac{2T}{N} \\sum_{j=0}^{N-1} \\left| u[j]\\right|^2$$"
    ]
   },
@@ -91,6 +98,7 @@
     "\n",
     "Le carré du module du coefficient d'ondelette $\\left| \\mathcal{W}(\\tau, t) \\right|^2$ représentant le *quantum* d'énergie des fluctuations de $u(t)$ sur la surface $\\Delta T \\times \\Delta \\tau$ autour d'un moment $t$ à l'échelle $\\tau$, nous pouvons tracer le scalogramme de la transformée sur un graphe à deux dimensions $(t,\\tau)$.\n",
     "Il est aussi possible de remonter à la puissance spectrale équivalente à la PSD via le spectre des fluctuations en intégrant sur la variable temporelle : \n",
+    "\n",
     "$$S_w = 2 \\delta t \\mathcal{W}(f)^2 = \\frac{2 \\delta t}{N} \\sum_{i=0}^{N-1} \\left| \\mathcal{W}(f, t_j) \\right|^2$$\n",
     "\n",
     "Vous trouverez plus de détails [ici](https://sites.lesia.obspm.fr/olga-alexandrova/files/2018/01/TP_M2_PPF_Alexandrova_Cecconi_2017_appendix.pdf \"Enoncé\")."
@@ -216,17 +224,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nous constatons tout d'abord que seule la moitié de la gamme de fréquence est couverte : en effet, la symétrie $ \\hat{u}[N - n] = \\hat{u}^*[n]$ nous confirme que ces deux moitiés sont identiques pour des données réelles. Il n'est donc pas nécessaire de conserver le reste. De plus, la fréquence maximale couverte est la fréquence de Nyquist, donnée par le théorème de Shannon-Nyquist : $f_{max} = f_{echant}/2 = 1/(2dt)$.\n",
-    "\n",
-    "Nous observons bien les fréquences correspondantes à $f_0$ et $f_1$ sur les spectres, mais une chose est très claire : en ne se basant que sur la transformée de Fourier, il est impossible de distinguer les signaux $y_1$ et $y_2$, qui diffèrent par le déphasage entre les modes associés à ces deux fréquences. Cela sera possible avec transformée en ondelettes.\n",
-    "\n",
-    "Nous avons également confirmé la précision de notre DFT à l'aide des transformées implémentées dans `numpy.fft` (cf. [TPA2-donnees-synthetiques.ipynb](http://nbviewer.jupyter.org/github/gbogopolsky/spectral-analysis-astro/blob/master/TPA2-donnees-synthetiques.ipynb?flush_cache=true \"TPA2-donnees-synthetiques on nbviewer\")), avec succès."
+    "Nous constatons tout d'abord que seule la moitié de la gamme de fréquence est couverte : en effet, la symétrie $ \\hat{u}[N - n] = \\hat{u}^*[n]$ nous confirme que ces deux moitiés sont identiques pour des données réelles. Il n'est donc pas nécessaire de conserver le reste. De plus, la fréquence maximale couverte est la fréquence de Nyquist, donnée par le théorème de Shannon-Nyquist : $f_{max} = f_{echant}/2 = 1/(2dt)$.  \n",
+    "Sur les spectres, les fréquences $f_0$ et $f_1$ sont bien visibles, mais une chose est très claire : en ne se basant que sur la transformée de Fourier, il est impossible de distinguer les signaux $y_1$ et $y_2$, qui diffèrent par le déphasage entre les modes associés à ces deux fréquences. Cela sera possible avec transformée en ondelettes."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Nous avons également confirmé la précision de notre DFT à l'aide des transformées implémentées dans `numpy.fft` (cf. [TPA2-donnees-synthetiques.ipynb](http://nbviewer.jupyter.org/github/gbogopolsky/spectral-analysis-astro/blob/master/TPA2-donnees-synthetiques.ipynb?flush_cache=true \"TPA2-donnees-synthetiques on nbviewer\")), avec succès.  \n",
     "Par ailleurs, vous avez peut-être remarqué précédemment l'utilisation de la fonction `fdft` au lieu de `dft`. En effet, la DFT implémentée comme nous l'avons décrit est très lente à cause de l'utilisation des doubles boucles de Python. Afin d'optimiser la vitesse d'exécution, nous mettons à profit la vitesse des opérations matricielles codées en C du paquet Numpy en implémentant `fdft` de la manière suivante :\n",
     "```python\n",
     "def fdft(data):\n",
