Frequency step comparaison between the two methods.

--- a/Rapport.ipynb
+++ b/Rapport.ipynb
@@ -247,7 +247,7 @@
     "    return output[:N//2+1]\n",
     "```\n",
     "Dans cette version, nous créons une matrice contenant tous les termes de l'exponentielle complexe en se basant sur la matrice $M_{n,j} = n j$ créée par produit matriciel, les axes étant choisi de façon adéquate. Il suffit ensuite de la multiplier avec notre vecteur de données pour obtenir la série fréquentielle sous forme de vecteur.\n",
-    "L'optimisation n'est pas encore optimale (la sortie étant tronquée, la routine calcule deux fois trop de valeurs), mais elle nous permet tout de même d'augmenter la vitesse d'exécution un facteur 42 !!!"
+    "L'optimisation n'est pas encore optimale (la sortie étant tronquée, la routine calcule deux fois trop de valeurs), mais elle nous permet tout de même d'augmenter la vitesse d'exécution un facteur 42 !"
    ]
   },
   {
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -372,31 +372,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.0 1.0\n"
+      "T0 =  2.0  T1 =  1.0\n"
      ]
     }
    ],
    "source": [
-    "print(1/f0, 1/f1)"
+    "print('T0 = ', 1/f0, ' T1 = ', 1/f1)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Enfin, comparons pour le signal $y_1$ le spectre de Fourier et le spectre des wavelets : "
+    "### Comparaison entre les deux méthodes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Enfin, comparons pour le signal $y_1$ le spectre de Fourier et le spectre des wavelets obtenu est calculant la grandeur $S_w$ définie précédemment : "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -439,10 +446,108 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(501,) (36,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(freq.shape, period1.shape)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nous constatons que le spectre en fréquence de Fourier est plus précis et défini en fréquence que le spectre des wavelets. Nous nous attendions à un tel résultats : en effet, afin de conserver la résolution temporelle, la transformée en ondelettes sacrifie de la résolution fréquentielle, ce que ne fait pas la transformée de Fourier. C'est la conséquence du principe d'incertitude de Heisenberg, qui relie la résolution en fréquence $\\Delta f$ (ou en échelle temporelle $\\Delta \\tau = 1/\\Delta f$) et la résolution temporelle $\\Delta T$ : \n",
+    "Nous constatons que le spectre en fréquence de Fourier est plus précis et défini en fréquence que le spectre des wavelets. Nous nous attendions à un tel résultats : en effet, afin de conserver la résolution temporelle, la transformée en ondelettes sacrifie sa résolution fréquentielle.  \n",
+    "Ainsi, pour la transformée de Fourier, $\\Delta f$ a pour valeur :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Delta_f =  0.10000000000000053 Hz\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Delta_f = ', freq[42] - freq[41], 'Hz')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alors que pour la transformée en ondelettes, cette valeur est variable, comme nous pouvons le voir dans l'array des coordonnées fréquentielles (obtenue avec $1/f \\simeq T$) :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[48.40066546 40.69994608 34.22443876 28.77920787 24.20033273 20.34997304\n",
+      " 17.11221938 14.38960393 12.10016636 10.17498652  8.55610969  7.19480197\n",
+      "  6.05008318  5.08749326  4.27805485  3.59740098  3.02504159  2.54374663\n",
+      "  2.13902742  1.79870049  1.5125208   1.27187332  1.06951371  0.89935025\n",
+      "  0.7562604   0.63593666  0.53475686  0.44967512  0.3781302   0.31796833\n",
+      "  0.26737843  0.22483756  0.1890651   0.15898416  0.13368921  0.11241878]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(1/period1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comme la plage de fréquences parcourue par les deux transformées reste proche :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fourier :    50.0 Hz\n",
+      "Ondelettes : 48.28824667898603 Hz\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Fourier :   ', freq[-1] - freq[0], 'Hz')\n",
+    "print('Ondelettes :', 1/period1[0] - 1/period1[-1], 'Hz')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Soit en moyenne $\\Delta f = 48,29/36 = 1,34$ Hz, donc un ordre de grandeur supérieur au pas de la transformée de Fourier.  \n",
+    "C'est la conséquence du principe d'incertitude de Heisenberg, qui relie la résolution en fréquence $\\Delta f$ (ou en échelle temporelle $\\Delta \\tau = 1/\\Delta f$) et la résolution temporelle $\\Delta T$ : \n",
     "$$ \\Delta f \\Delta T \\sim const.$$"
    ]
   },
