Correct university name.

--- a/Rapport.ipynb
+++ b/Rapport.ipynb
@@ -8,7 +8,7 @@
     "------\n",
     "TP A2 — Guillaume Bogopolsky  \n",
     "Physics of Plasma and Fusion Master's Degree  \n",
-    "Paris-Saclay University"
+    "Université Paris-Saclay"
    ]
   },
   {
