--- a/Rapport.ipynb
+++ b/Rapport.ipynb
@@ -26,7 +26,7 @@
     "L'analyse spectrale d'un signal consiste à exhiber ses fréquences caractéristiques grâce à la transformée de Fourier en représentant dans l'espace des fréquences sa *power spectral density* (PSD). Toutefois, comme nous le verrons, il est impossible de distinguer la répartition temporelle des différents modes, contenue dans les phases. Pour récupérer cette information, nous allons utiliser une transformée en ondelettes.\n",
     "Cela nous permettra notamment d'étudier des données spatiales comme les traversées de régions très différentes (ici, la traversée de la magnétosphère terrestre par la mission CLUSTER).\n",
     "\n",
-    "Au cours de cet TP, nous allons étudier tout d'abord la transformée de Fourier discrète et la transformée en ondelettees de Morlet sur des signaux synthétiques, et exhiber leurs différences, puis nous appliquerons ces méthodes à des données réelles. \n",
+    "Au cours de cet TP, nous allons étudier tout d'abord la transformée de Fourier discrète et la transformée en ondelettes de Morlet sur des signaux synthétiques, et étudier leurs différences, puis nous appliquerons ces méthodes à des données réelles. \n",
     "\n",
     "Ce compte-rendu a été réalisé grâce aux Jupyter Notebook, il vous est donc possible de récupérer ses fichiers dans le [dépôt GitHub](https://github.com/gbogopolsky/spectral-analysis-astro \"spectral-analysis-astro by gbogopolsky on GitHub\") et de l'éxecuter sur votre machine. "
    ]
@@ -37,7 +37,7 @@
    "source": [
     "## Eléments théoriques\n",
     "------\n",
-    "Tout d'abord, définissons les outils mathématiques que nous allons utiliser dans cette partie.\n",
+    "Commençons par définir les outils mathématiques que nous allons utiliser dans cette partie.\n",
     "### La transformée de Fourier discrète"
    ]
   },
@@ -94,8 +94,7 @@
     "$$ \\psi_0 (t) = \\pi^{-1/4} e^{-i \\omega_0 t} e^{-t^2/2}$$\n",
     "La dilatation et la translation de cette ondelette permet de définir par convolution la transformée en ondelettes : \n",
     "$$\\mathcal{W}(\\tau, t) = \\sum_{j=0}^{N-1} u(t_j) \\psi^*((t_j - t)/\\tau)$$\n",
-    "avec $t_j$ la position autour de laquelle on effectue la convolution dans une fenêtre $\\Delta t$, et $\\tau$ un paramètre de dilatation temporelle ou échelle temporelle. Nous choisissons cette échelle de sorte qu'une relation simple existe avec les fréquences de Fourier : $1/f \\simeq \\tau$ en posant $\\omega_0 = 6$.\n",
-    "\n",
+    "avec $t_j$ la position autour de laquelle on effectue la convolution dans une fenêtre $\\Delta t$, et $\\tau$ un paramètre de dilatation temporelle ou échelle temporelle. Nous choisissons cette échelle de sorte qu'une relation simple existe avec les fréquences de Fourier : $1/f \\simeq \\tau$ en posant $\\omega_0 = 6$.  \n",
     "Le carré du module du coefficient d'ondelette $\\left| \\mathcal{W}(\\tau, t) \\right|^2$ représentant le *quantum* d'énergie des fluctuations de $u(t)$ sur la surface $\\Delta T \\times \\Delta \\tau$ autour d'un moment $t$ à l'échelle $\\tau$, nous pouvons tracer le scalogramme de la transformée sur un graphe à deux dimensions $(t,\\tau)$.\n",
     "Il est aussi possible de remonter à la puissance spectrale équivalente à la PSD via le spectre des fluctuations en intégrant sur la variable temporelle : \n",
     "\n",
@@ -246,8 +245,8 @@
     "    output = np.dot(data, exp) / N\n",
     "    return output[:N//2+1]\n",
     "```\n",
-    "Dans cette version, nous créons une matrice contenant tous les termes de l'exponentielle complexe en se basant sur la matrice $M_{n,j} = n j$ créée par produit matriciel, les axes étant choisi de façon adéquate. Il suffit ensuite de la multiplier avec notre vecteur de données pour obtenir la série fréquentielle sous forme de vecteur.\n",
-    "L'optimisation n'est pas encore optimale (la sortie étant tronquée, la routine calcule deux fois trop de valeurs), mais elle nous permet tout de même d'augmenter la vitesse d'exécution un facteur 42 !"
+    "Dans cette version, nous créons une matrice contenant tous les termes de l'exponentielle complexe en se basant sur la matrice $M_{n,j} = n j$ créée par produit matriciel, les axes étant choisi de façon adéquate. Il suffit ensuite de la multiplier avec notre vecteur de données pour obtenir la série fréquentielle.\n",
+    "L'optimisation n'est pas encore optimale (la sortie étant tronquée, la routine calcule deux fois trop de valeurs), mais elle nous permet tout de même d'augmenter la vitesse d'exécution un facteur 48 !"
    ]
   },
   {
@@ -570,8 +569,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nous allons maintenant étudier des données spatiales provenant de la mission CLUSTER lancée en 2000. Elle est constituée de quatre satellites qui ont pour missions d'étudier l'interaction entre le vent solaire et la magnétoshpère terrestre en mesurant notamment le champ magnétique en trois dimensions grâce à quatre satellites.  \n",
-    "Aujourd'hui, nous nous intéressons aux relevés de champs magnétique du 31 mars 2001 qui présente de multiples traversée de la zone de choc entre le vent solaire et la magnétosphère terrestre. \n",
+    "Nous allons maintenant étudier des données spatiales provenant de la mission CLUSTER lancée en 2000. Elle est constituée de quatre satellites qui ont pour missions d'étudier l'interaction entre le vent solaire et la magnétoshpère terrestre en mesurant notamment le champ magnétique en trois dimensions grâce à la répartition spatiale des quatres satellites.  \n",
+    "Aujourd'hui, nous nous intéressons au relevé des mesures de champs magnétique du 31 mars 2001 qui présente de multiples traversées de la zone de choc entre le vent solaire et la magnétosphère terrestre. \n",
     "\n",
     "En utilisant un module de `scipy` pour lire le fichier en `.sav`, nous pouvons tracer ces données et afin d'avoir une meilleure idée de ce qu'il se passe, calculons le module du vecteur champ magnétique : "
    ]
@@ -748,7 +747,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dans ce scalogramme, nous voyons apparaître des structures verticales, significative de phénomènes localisés dans le temps mettant en jeu toutes les échelles de période (contrairement aux ondes de la partie précédente, ayant une période fixée). Nous observons aussi l'existence de valeurs non physique en-dehors du *cone of influence* (COI) tracé en rouge sur la figure ci-dessus.  \n",
+    "Dans ce scalogramme, nous voyons apparaître des structures verticales, significative de phénomènes localisés dans le temps mettant en jeu toutes les échelles de période (contrairement aux ondes de la partie précédente, ayant une période fixée). Nous observons aussi l'existence de valeurs non physiques en-dehors du *cone of influence* (COI) tracé en rouge sur la figure ci-dessus.  \n",
     "Comme nous nous y attendions, la gamme d'échelles temporelles résolues est plus petite que pour la transformée de Fourier (par principe d'incertitude d'Heisenberg) : \n",
     "$$\\Delta f_{wavelet} = f_{max} - f_{min} = \\frac{1}{T_{min}} - \\frac{1}{T_{max}} = 12,39 ~\\text{Hz}$$\n",
     "Pour obtenir ce résultat, nous utilisons le fait que $1/f \\simeq T$ dans notre cas."
@@ -822,7 +821,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nous constatons de la même façon que précédemment que la résolution en fréquence de la transformée en ondelettes est bien moins grande que la transformée de Fourier, mais elle nous permet de conserver l'information sur la localisation temporelle des modes du signal. Les deux sont donc très efficaces dans leurs utilisations respectives, et je dirais même plus, complémentaires : il est tout aussi simple d'interpréter les résultats des deux transformées (avec un léger avantage pour Fourier tout de même).  \n",
+    "Nous constatons de la même façon que précédemment que la résolution en fréquence de la transformée en ondelettes est bien moins grande que la transformée de Fourier, mais elle nous permet de conserver l'information sur la localisation temporelle des modes du signal. Les deux sont donc très efficaces dans leurs utilisations respectives, et je dirais même plus, complémentaires. Il est  d'ailleurs tout aussi simple d'interpréter les résultats des deux transformées (avec un léger avantage pour Fourier tout de même).  \n",
     "Par contre, la transformée en ondelettes a une précision en basse fréquences plus faible que la transformée de Fourier."
    ]
   },
@@ -833,7 +832,7 @@
     "## Conclusion\n",
     "------\n",
     "\n",
-    "Au cours de ce TP, nous avons introduit la transformée de Fourier via une DFT manuelle, ainsi que la transformée en ondelettes de Morlet. Nous avons exhiber la différence entre les deux, et leur application à des données réelles nous a permis de montrer leurs domaines d'applications, leurs forces et leurs faiblesses. Finalement, nous ne pouvons que dire que ces deux approches sont complémentaires lors de l'étude d'un signal temporel, car elles permettent de mettre en évidence des phénomènes différents.\n",
+    "Au cours de ce TP, nous avons introduit la transformée de Fourier via une DFT manuelle, ainsi que la transformée en ondelettes de Morlet. Nous avons pu exhiber la différence entre les deux, et leur application à des données réelles nous a permis de montrer leurs domaines d'applications, leurs forces et leurs faiblesses. Finalement, nous ne pouvons que dire que ces deux approches sont complémentaires lors de l'étude d'un signal temporel, car elles permettent de mettre en évidence des phénomènes différents.\n",
     "\n",
     "Je tiens à remercier Olga Alexandrova et Baptiste Cecconi du [LESIA](http://lesia.obspm.fr/) pour leur encadrement durant cette journée et leur passion communicative. Merci beaucoup ! "
    ]
